src/test/deca/syntax/valid/created/testsGeneraux/printReadInt.deca
// Description :
//    Test de la lecture d'un entier avec readInt,
//    suivi de l'affichage du double de la valeur lue
//
// Résultats :
//    ok

{
    int x = readInt();
    println(2 * x);
}

